k8s/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
    service.beta.kubernetes.io/aws-load-balancer-tls-cert: arn:aws:acm:ap-south-1:734702322667:certificate/51da0191-54c7-48ae-87f3-5c9bf1927054
    service.beta.kubernetes.io/aws-load-balancer-tls-ports: "https"

spec:
  selector:
    app: web
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: https
    port: 443
    targetPort: 8080
  type: LoadBalancer
