k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-login-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:ap-south-1:734702322667:certificate/51da0191-54c7-48ae-87f3-5c9bf1927054
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
spec:
  selector:
    app: login-system
  type: LoadBalancer
  ports:
   - name: http
    port: 80
    targetPort: 8080
   - name: https
    port: 443
    targetPort: 8080
